# MeshViewer

./: .gitignore
src/: CMakeLists.txt  Makefile  Shader.cpp  main.cpp
src/dependencies/glad/include/glad/: glad.h
src/dependencies/glad/src/: glad.c
src/include/: Shader.h
src/shaders/: fragmentShader.glsl  vertexShader.glsl
